--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Neel <neelnarayanshetty@gmail.com>",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.2.1",
     "express": "^4.18.2",
-    "node": "^19.3.0"
+    "node": "^19.3.0",
+    "nodemon": "^2.0.20"
   }
 }
